fix placeholder not showing on ios

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
 body {
   background-color: black;
+  width: 100%;
+  height: 100%;
 }
