--- a/src/css/App.css
+++ b/src/css/App.css
@@ -4,3 +4,7 @@ body {
     font-family: 'Montserrat', sans-serif;
     color: white;
 }
+
+::-webkit-input-placeholder {
+    color: black;
+}
