--- a/src/css/JoinPage.module.css
+++ b/src/css/JoinPage.module.css
@@ -41,3 +41,7 @@
     border: 2px black solid;
     margin: 5%;
 }
+
+::-webkit-input-placeholder {
+    color: black;
+}
